--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
-        "filp/whoops": "^2.18"
+        "filp/whoops": "^2.18",
+        "erusev/parsedown": "^1.7"
     }
 }
