--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "filp/whoops": "^2.18",
-        "erusev/parsedown": "^1.7"
+        "erusev/parsedown": "^1.7",
+      "": ""
     }
 }
