--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
     ],
     "require": {
         "filp/whoops": "^2.18",
-        "erusev/parsedown": "^1.7",
-      "": ""
+        "erusev/parsedown": "^1.7"
     }
 }
